Fix some layout issues

--- a/www/include/css/index.css
+++ b/www/include/css/index.css
@@ -316,6 +316,29 @@ color:#629628;
     border-radius: 10px;
     display:inline-block;
     }
+.testSuitesButton {
+    width:100px;
+    height:25px;
+    margin-top:10px;
+    cursor:pointer;
+    border: none;
+    color:#FFFFFF;
+    text-align:center;
+    vertical-align:middle;
+    font-family:Verdana, Arial, Helvetica, sans-serif;
+    font-size:11px;
+    font-weight:bold;
+
+    background-color:#629628!important;
+    padding:8px 16px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    display:inline-block;
+    }
+
+.testSuitesButton:hover {
+    background-color:#f3a541!important;
+}
 
 .casesButton {
     width:150px;
